src/Css/ChatRoom.css
.chatroom__container{
    max-width: 100vw;
    height: calc(100vh - 4rem);
    display: flex;
}

.chatroom__chats{
    /* max-width: 1100px; */
    flex:0.8;
    display: flex;
    flex-direction: column;
    padding: 1rem 1rem 1rem 1rem;
    align-items: stretch;
}

.chatroom__form{
    display: flex;
    border-radius: 0.5rem;
    overflow: hidden;
}
.chatroom__form > input{
    padding: 0 1rem 0 1rem;
    flex: 1;
    background-color:  #0e0e0e;
    border: none;
    height: 2.5rem;
    outline: none;
}
.chatroom__form > button{
    font-weight: bold;
    color: black;
    width: 6rem;
    background: linear-gradient(to right, #59f9b7,#66feea);
    text-decoration: none;
    border: none;
}

.chatroom__chatList{
    display: flex;
    flex-direction: column;
    flex: 1;
    overflow-y: scroll;
    margin-bottom: 1rem;
}
.chatroom__chatList::-webkit-scrollbar{
    width: 1rem;
}
.chatroom__chatList::-webkit-scrollbar-thumb{
    width: 1rem;
    background-color: #0e0e0e;
    border-radius: 1rem;
    border:0.3rem solid transparent;
    background-clip:content-box;
}

.chatroom__personList{
    display: none;
}
.chatroom__chatList::-webkit-scrollbar-thumb:hover{
    background-color: #222222;
}
@media screen and (max-width:426px) {
   
    .chatroom__chats{
        flex: 1;
    }
    .chatroom__container{
        position: relative;
    }
    .chatroom__personList{
        padding-top: 0.1rem;
        padding-left: 0.3rem;
        padding-right: 0.3rem;
        height: 2.5rem;
        background-color:  #373737;
        display: flex;
        align-items: center;
        justify-content: center;
        display: block;
    }
}

@media screen  and (max-width:375){
    .chatroom__form>input{
        flex: 0.7;
    }
    .chatroom__form > button{
        flex: 0.3;
    }
}

